turtleart.diskfour.DiskFour.scala.error
Erreur de compilation :
DiskFour:11: error: expected class or object definition
def fourth(c:Color){
^